Added code for privacy filter. Bringing back favicon
* Privacy filter code is in place, need list of malware,
  ads, and trackers to block.

* bringing back favicon for current site in smart routing view

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -60,7 +60,7 @@
         </div>
         <div class="location last">
           <div class="flag-container small square">
-            <img src="/assets/cypherpunk_shaded_32.png" />
+            <img *ngIf="faviconUrl" src="{{faviconUrl}}" />
           </div>
           <div class="subtitle" [innerHTML]="domain"></div>
         </div>
