Updated to added free vs premium. Added sever selection list
* Serverlist uses different data source based on if the account
  is free or premium

* Created select server view

--- a/src/app/advanced-settings/advanced-settings.component.html
+++ b/src/app/advanced-settings/advanced-settings.component.html
@@ -1,4 +1,4 @@
-<div id="advanced-settings">
+<div id="sub-menu">
   <div id="header" class="bottom-separator">
     <a routerLink="/" routerLinkActive="active"><span class="back-icon">&#x3008;</span>{{title}}</a>
   </div>
