--- a/src/app/selected-country/selected-country.component.html
+++ b/src/app/selected-country/selected-country.component.html
@@ -1,6 +1,6 @@
 <div id="sub-menu">
-  <div id="header" class="bottom-separator">
-    <a routerLink="/" routerLinkActive="active"><span class="back-icon">&#x3008;</span>{{title}}</a>
+  <div id="header" routerLink="/" routerLinkActive="active" class="bottom-separator">
+    <span class="back-icon">&#x3008;</span>{{title}}
   </div>
 
   <div class="country-select">
