Added specific contry view and styled default routing
* default routing and specific country sub views created and styled

--- a/src/app/advanced-settings/default-routing/default-routing.component.html
+++ b/src/app/advanced-settings/default-routing/default-routing.component.html
@@ -3,4 +3,31 @@
     <span class="back-icon">&#x3008;</span>{{title}}
   </div>
 
+  <!-- Smart Routing -->
+  <div (click)="defaultRoutingSelection = 0" [ngClass]="{'checked': defaultRoutingSelection === 0}" class="double-row bottom-separator">
+    <div class="label">Use Smart Routing</div>
+    <div class="desc">Use the server closest to the site.</div>
+  </div>
+
+  <!-- Fastest Server -->
+  <div (click)="defaultRoutingSelection = 1" [ngClass]="{'checked': defaultRoutingSelection === 1}" class="double-row bottom-separator">
+    <div class="label">Use the fastest server</div>
+    <div class="desc">Use the server closest to me.</div>
+  </div>
+
+  <!-- Specific Country -->
+  <div routerLink="specific-country" routerLinkActive="active" (click)="defaultRoutingSelection = 2" [ngClass]="{'checked': defaultRoutingSelection === 2}" class="double-row bottom-separator" >
+    <div class="label half">Use a specific country</div>
+    <div class="action">
+      {{selectedCountry}}
+      <span class="forward-icon">&#x3009;</span>
+    </div>
+    <div class="desc">Select a country you would like to use.</div>
+  </div>
+
+  <!-- Do Not Proxy -->
+  <div  (click)="defaultRoutingSelection = 3" [ngClass]="{'checked': defaultRoutingSelection === 3}" class="double-row bottom-separator">
+    <div class="label">Do not proxy my web traffic</div>
+    <div class="desc">Disable the proxy for all sites.</div>
+  </div>
 </div>
