--- a/src/app/advanced-settings/default-routing/default-routing.component.html
+++ b/src/app/advanced-settings/default-routing/default-routing.component.html
@@ -17,7 +17,7 @@
 
   <!-- Specific Country -->
   <div routerLink="specific-country" routerLinkActive="active" (click)="defaultRoutingSelection = 2" [ngClass]="{'checked': defaultRoutingSelection === 2}" class="double-row bottom-separator" >
-    <div class="label half">Use a specific country</div>
+    <div class="label half">Use specific server</div>
     <div class="action">
       {{selectedCountry}}
       <span class="forward-icon">&#x3009;</span>
