Persisting settings for User Agent and Privacy Filter views

--- a/src/app/advanced-settings/advanced-settings.component.html
+++ b/src/app/advanced-settings/advanced-settings.component.html
@@ -46,7 +46,7 @@
   <div routerLink="user-agent" routerLinkActive="active" class="switch-row clickable bottom-separator">
     <div class="label half">User Agent</div>
     <div class="switch half">
-      {{userAgent()}}
+      {{userAgentType}}
       <span class="forward-icon">&#x3009;</span>
     </div>
   </div>
