--- a/src/app/advanced-settings/user-agent/user-agent.component.html
+++ b/src/app/advanced-settings/user-agent/user-agent.component.html
@@ -4,28 +4,23 @@
   </div>
 
   <!-- Private User Agent -->
-  <div (click)="selectedUserAgent = 0" [ngClass]="{'checked': selectedUserAgent === 0}" class="switch-row selectable bottom-separator">
+  <div (click)="setUserAgent('PRIVATE')" [ngClass]="{'checked': selectedUserAgentType === 'PRIVATE'}" class="switch-row selectable bottom-separator">
     <div class="label">Private User Agent</div>
   </div>
 
+  <!-- Default User Agent -->
+  <div (click)="setUserAgent('DEFAULT')" [ngClass]="{'checked': selectedUserAgentType === 'DEFAULT'}" class="switch-row selectable bottom-separator">
+    <div class="label">Default User Agent</div>
+  </div>
+
   <!-- iOS User Agent -->
-  <div (click)="selectedUserAgent = 1" [ngClass]="{'checked': selectedUserAgent === 1}" class="switch-row selectable bottom-separator">
+  <div (click)="setUserAgent('IOS')" [ngClass]="{'checked': selectedUserAgentType === 'IOS'}" class="switch-row selectable bottom-separator">
     <div class="label">iOS User Agent</div>
   </div>
 
   <!-- Android User Agent -->
-  <div (click)="selectedUserAgent = 2" [ngClass]="{'checked': selectedUserAgent === 2}" class="switch-row selectable bottom-separator">
+  <div (click)="setUserAgent('ANDROID')" [ngClass]="{'checked': selectedUserAgentType === 'ANDROID'}" class="switch-row selectable bottom-separator">
     <div class="label">Android User Agent</div>
-  </div>
-
-  <!-- Mozilla User Agent -->
-  <div (click)="selectedUserAgent = 3" [ngClass]="{'checked': selectedUserAgent === 3}" class="switch-row selectable bottom-separator">
-    <div class="label">Mozilla User Agent</div>
-  </div>
-
-  <!-- Opera User Agent -->
-  <div (click)="selectedUserAgent = 4" [ngClass]="{'checked': selectedUserAgent === 4}" class="switch-row selectable bottom-separator">
-    <div class="label">Opera User Agent</div>
   </div>
 
 </div>
