--- a/src/app/advanced-settings/default-routing/specific-server/specific-server.component.html
+++ b/src/app/advanced-settings/default-routing/specific-server/specific-server.component.html
@@ -10,12 +10,13 @@
         {{regions[server.region]}}
       </div>
 
-      <div class="location-row" (click)="selectProxy(server)" [ngClass]="{'checked': selectedServerId === server.id, 'disabled': !server.enabled }">
+      <div class="location-row" (click)="selectProxy(server)" [ngClass]="{'checked': selectedServerId === server.id, 'disabled': !server.enabled || !server.httpDefault.length }">
         <span class="flag">
           <img src="{{'/assets/flags/24/' + server.country + '.png' }}" />
         </span>
         <span class="name">{{server.name}}</span>
         <span *ngIf="server.level === 'premium'" class="premium">PREMIUM</span>
+        <span *ngIf="!server.httpDefault.length" class="unavailable">UNAVAILABLE</span>
       </div>
 
     </div>
