--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -72,23 +72,30 @@
 
 #smart-routing-off {
   @include span-columns(12);
-  @include pad(rem(20));
   background-color: rgba(102, 102, 102, 0.6);
-  height: rem(330);
+  max-height: rem(480);
 
-  .title {
-    margin-top: rem(40);
-    font-size: 18px;
-    text-align: center;
-  }
-  .location {
-    margin-top: rem(10);
-    text-align: center;
-
-    label {
-      font-weight: 400;
-      display: block;
+  .location-info {
+    @include span-columns(12);
+    @include pad(rem(20));
+    .title {
+      margin-top: rem(40);
+      font-size: 18px;
+      text-align: center;
     }
+    .location {
+      margin-top: rem(10);
+      text-align: center;
+
+      label {
+        font-weight: 400;
+        display: block;
+      }
+    }
+  }
+
+  .country-select {
+    height: rem(172);
   }
 }
 
