Updating Smart Routing OFF state
Adding smart routing state to parent element
Switch bar background: red when Smart Routing = off
Updating hover color on Country Selector

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,4 +1,4 @@
-<div id="index" [ngClass]="{'cypherpunk-on': cypherpunkEnabled, 'cypherpunk-off': !cypherpunkEnabled}">
+<div id="index" [ngClass]="{'cypherpunk-on': cypherpunkEnabled, 'cypherpunk-off': !cypherpunkEnabled, 'smart-routing--on': smartRoutingEnabled, 'smart-routing--off': !smartRoutingEnabled}">
   <div id="header__main">
     <img src="/assets/header-logo-big.svg" alt="">
     <a routerLink="/advanced-settings" routerLinkActive="active" class="btn__settings"><img src="/assets/icon_settings.svg" alt=""></a>
