--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,14 @@
 // Style Variables
 
 $app-height: 600px;
+
+
+// Colors
+$gray-med:        #999;
+$gray-dark-trans: rgba(102, 102, 102, 0.85);
+$color-error:     #e02222;
+$overlay--hover:  rgba(0,0,0,0.25);
+
+
+// Frames
+$border--separator: 1px solid rgba(255, 255, 255, 0.2);
