--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -90,7 +90,7 @@ body {
   font-size: rem(11);
 }
 
-.bottom-separator { border-bottom: solid 1px rgba(255, 255, 255, 0.2); }
+.bottom-separator { border-bottom: $border--separator; }
 
 .top-separator { border-top: solid 1px rgba(255, 255, 255, 0.2); }
 
