--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -19,6 +19,18 @@ body {
   padding: 0;
 }
 
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgba(255,255,255,0.25);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0,0,0,.35);
+}
+
 #sub-menu {
   width: 100%;
   height: 100%;
