Updating style of Country Selector
country selector hover colors
scrollbar style

--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -151,6 +151,10 @@
         background-color: $overlay--hover;
       }
     }
+
+    .region {
+      background-color: $overlay--dark;
+    }
   }
 }
 
