--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,6 +8,7 @@ $gray-med:        #999;
 $gray-dark-trans: rgba(102, 102, 102, 0.85);
 $color-error:     #e02222;
 $overlay--hover:  rgba(0,0,0,0.25);
+$overlay--dark:   rgba(0,0,0,.35);
 
 
 // Frames
