--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -28,7 +28,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(0,0,0,.35);
+  background-color: $overlay--dark;
 }
 
 #sub-menu {
