User Agent, Selectable proxy and misc fixes
* Added ability to switch user agents. Functionality is now working
  just need the list of user agents to provide to the user

* Proxy is now selectable when smart routing is off via the main
  selector on the index view. WIP some servers do not respond
  such as amsterdam

* Auth dialog should no longer pop up when attempting to connect
  to a proxy server.

* Attempted to figure out a way to ping via the angular http method
  this is still a work in progress

 50-character subject line

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -47,7 +47,7 @@
             {{proxySettingsService.regions[server.region]}}
           </div>
 
-          <div class="location-row" [ngClass]="{'checked': selectedServerId === server.id, 'disabled': !server.enabled || !server.httpDefault.length }">
+          <div class="location-row" (click)="changeProxy(server)" [ngClass]="{'checked': selectedProxy.id === server.id, 'disabled': !server.enabled || !server.httpDefault.length }">
             <span class="flag">
               <img src="{{'/assets/flags/24/' + server.country + '.png' }}" />
             </span>
