Treating settings as one view loading different components. Misc
* Settings view is now one route with nested components. This is in
  hopes of allowing different animation states based on entering or
  leaving a parent/child state. Route based animations were restricted
  to only a leave and enter animation regardless of going to a parent
  or child state.

* Advanced Settings renamed to Settings

* Animations are a WIP

* Fixed issue with the large power button not signaling the ON
  state properly for Cypherpunk. This was causing certain actions
  the background script was performing not to work, such as applying
  the user agent

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,7 +1,7 @@
 <div id="index" [ngClass]="{'cypherpunk-on': cypherpunkEnabled, 'cypherpunk-off': !cypherpunkEnabled, 'smart-routing--on': smartRoutingEnabled, 'smart-routing--off': !smartRoutingEnabled}">
   <div id="header__main">
     <img src="/assets/header-logo-big.svg" alt="">
-    <a routerLink="/advanced-settings" routerLinkActive="active" class="btn__settings"><img src="/assets/icon_settings.svg" alt=""></a>
+    <a routerLink="/settings" routerLinkActive="active" class="btn__settings"><img src="/assets/icon_settings.svg" alt=""></a>
   </div>
   <!-- <div id="header-on-off" class="bottom-separator" [ngClass]="{'header-off': !cypherpunkEnabled}">
     <div id="logo"><div></div></div>
@@ -119,7 +119,7 @@
     <div class="title">Cypherpunk is Off</div>
     <div class="button">
       <label class="key-switch">
-        <input #enableVpnSwitchLarge type="checkbox" (change)="toggleCypherpunk($event)" />
+        <input #enableVpnSwitchLarge [(ngModel)]="cypherpunkEnabled" type="checkbox" (ngModelChange)="toggleCypherpunk($event)" />
         <div class="checkbox large"></div>
       </label>
     </div>
