--- a/src/app/settings/default-routing/specific-server/specific-server.component.html
+++ b/src/app/settings/default-routing/specific-server/specific-server.component.html
@@ -1,5 +1,5 @@
 <div id="sub-menu">
-  <div id="header" routerLink="/advanced-settings/default-routing" routerLinkActive="active" class="bottom-separator">
+  <div id="header" (click)="goToView('app-default-routing')" class="bottom-separator">
     <span class="back-icon">&#x3008;</span>{{title}}
   </div>
 
