--- a/src/app/settings/default-routing/default-routing.component.html
+++ b/src/app/settings/default-routing/default-routing.component.html
@@ -1,5 +1,5 @@
 <div id="sub-menu">
-  <div id="header" routerLink="/advanced-settings" routerLinkActive="active" class="bottom-separator">
+  <div id="header" (click)="goToView('app-settings')" class="bottom-separator">
     <span class="back-icon">&#x3008;</span>{{title}}
   </div>
 
@@ -16,7 +16,7 @@
   </div>
 
   <!-- Specific Country -->
-  <div routerLink="specific-server" routerLinkActive="active" [ngClass]="{'checked': defaultRoutingType === 'SPECIFIC'}" class="double-row bottom-separator" >
+  <div (click)="goToView('app-specific-server')" [ngClass]="{'checked': defaultRoutingType === 'SPECIFIC'}" class="double-row bottom-separator" >
     <div class="label half">Use specific server</div>
     <div class="action">
       {{defaultRoutingSelected}}
