--- a/src/app/settings/privacy-filter/privacy-filter.component.html
+++ b/src/app/settings/privacy-filter/privacy-filter.component.html
@@ -1,5 +1,5 @@
 <div id="sub-menu">
-  <div id="header" routerLink="/advanced-settings" routerLinkActive="active" class="bottom-separator">
+  <div id="header" (click)="goToView('app-settings')" class="bottom-separator">
     <span class="back-icon">&#x3008;</span>{{title}}
   </div>
 
