--- a/src/app/settings/settings-controller.component.html
+++ b/src/app/settings/settings-controller.component.html
@@ -1,10 +1,19 @@
-<app-settings (changeView)="changeView($event)" *ngIf="currentView === 'app-settings'"></app-settings>
+<div style="z-index: 2; width:100%; height: 100%; display: block; position:absolute;" [@slideIn]="'static'" *ngIf="currentView === 'app-settings'">
+  <app-settings (changeView)="changeView($event)"></app-settings>
+</div>
 
-<app-user-agent (changeView)="changeView($event)" *ngIf="currentView === 'app-user-agent'"></app-user-agent>
+<div style="z-index: 3; width:100%; height: 100%; display: block; position:absolute;" [@slideIn]="'dynamic'" *ngIf="currentView === 'app-user-agent'">
+  <app-user-agent (changeView)="changeView($event)"></app-user-agent>
+</div>
 
-<app-default-routing (changeView)="changeView($event)" *ngIf="currentView === 'app-default-routing'"></app-default-routing>
+<div style="z-index: 3; width:100%; height: 100%; display: block; position:absolute;" [@slideIn]="type" *ngIf="currentView === 'app-default-routing'">
+  <app-default-routing (changeView)="changeView($event)"></app-default-routing>
+</div>
 
-<app-specific-server (changeView)="changeView($event)" *ngIf="currentView === 'app-specific-server'"></app-specific-server>
+<div style="z-index: 4; width:100%; height: 100%; display: block; position:absolute;" [@slideIn]="'dynamic'" *ngIf="currentView === 'app-specific-server'">
+  <app-specific-server (changeView)="changeView($event)"></app-specific-server>
+</div>
 
-<app-privacy-filter (changeView)="changeView($event)" *ngIf="currentView === 'app-privacy-filter'"></app-privacy-filter>
-
+<div style="z-index: 3; width:100%; height: 100%; display: block; position:absolute;" [@slideIn]="'dynamic'" *ngIf="currentView === 'app-privacy-filter'">
+  <app-privacy-filter (changeView)="changeView($event)"></app-privacy-filter>
+</div>
